# pgsd

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  TEST_REPORT.md  manual_compare.py  pyproject.toml  pytest-docker.ini  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_analyzer_manual.py  test_template.html
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  integration-tests.yml  security.yml
config/: ntb_comparison.yaml  pgsd.yaml.example
debug_reports/: schema_diff_20250716_011013_markdown.md
doc/: DEVELOPER_GUIDE.md  DOCKER_TESTING.md  README_CICD.md
doc/design/: ARCHITECTURE.md  CICD_ARCHITECTURE_DESIGN.md  CICD_DETAILED_DESIGN.md  CONFIG_MANAGEMENT_ARCHITECTURE_DESIGN.md  CONFIG_MANAGEMENT_DETAILED_DESIGN.md  DATABASE_CONNECTION_ARCHITECTURE_DESIGN.md  DATABASE_CONNECTION_DETAILED_DESIGN.md  ERROR_HANDLING_ARCHITECTURE_DESIGN.md  ERROR_HANDLING_DETAILED_DESIGN.md  FUNCTIONAL_DESIGN.md  LOGGING_ARCHITECTURE_DESIGN.md  LOGGING_DETAILED_DESIGN.md  PROJECT_FOUNDATION_DESIGN.md  TEST_ENVIRONMENT_ARCHITECTURE_DESIGN.md  TEST_ENVIRONMENT_DETAILED_DESIGN.md
doc/operations/: CICD_OPERATIONS_MANUAL.md
doc/plans/: PROJECT_PLAN.md
doc/procedures/: PROJECT_SETUP_PROCEDURE.md
doc/requirements/: REQUIREMENTS.md
doc/research/: PGSD-005_schema_info_method_research.md  PGSD-006_postgresql_version_compatibility.md  PGSD-007_diff_algorithm_verification.md  PGSD-008_information_schema_research.md
doc/results/: PROJECT_FOUNDATION_RESULT.md
docker/: docker-compose.test.yml
docker/init/: 01_create_schemas.sql  01_create_test_schemas.sql  02_sample_data.sql
docs/: CLI_REFERENCE.md  EXAMPLES.md  USER_GUIDE.md
docs/user_manual/: index.md
docs/user_manual/advanced/: api_integration.md  ci_cd_integration.md  custom_templates.md  performance_tuning.md  scripting.md
docs/user_manual/configuration/: config_file.md  database_setup.md  output_settings.md
docs/user_manual/features/: automation.md  diff_analysis.md  report_formats.md  schema_comparison.md
docs/user_manual/getting_started/: basic_workflow.md  first_comparison.md  installation.md
docs/user_manual/reference/: api_specification.md  cli_commands.md  config_reference.md  error_codes.md
docs/user_manual/troubleshooting/: common_issues.md  error_messages.md
examples/: .env.example  pgsd_config.yaml
project_management/: IMPLEMENTATION_PLAN.md  README.md  TICKET_TEMPLATE.md  dev_rule.md  document_rule.md  project_management_rule.md  tickets.md  tid.md  work_rule.md
project_management/tickets/: pgsd-001.md  pgsd-002.md  pgsd-003.md  pgsd-004.md  pgsd-005.md  pgsd-006.md  pgsd-007.md  pgsd-008.md  pgsd-009.md  pgsd-010.md  pgsd-011.md  pgsd-012.md  pgsd-013.md  pgsd-014.md  pgsd-015.md  pgsd-016.md  pgsd-017.md  pgsd-018.md  pgsd-019.md  pgsd-020.md  pgsd-021.md  pgsd-022.md  pgsd-023.md  pgsd-024.md  pgsd-025.md  pgsd-026.md  pgsd-027.md  pgsd-028.md  pgsd-029.md  pgsd-030.md  pgsd-031.md  pgsd-032.md  pgsd-033.md  pgsd-034.md  pgsd-035.md  pgsd-036.md  pgsd-037.md  pgsd-038.md  pgsd-039.md  pgsd-040.md  (+5 more)
scripts/: test-with-docker.sh
src/pgsd/: __init__.py  __main__.py  main.py
src/pgsd/cli/: __init__.py  commands.py  main.py  progress.py
src/pgsd/config/: __init__.py  manager.py  parsers.py  schema.py  substitutor.py  validator.py
src/pgsd/constants/: __init__.py  database.py
src/pgsd/core/: __init__.py  analyzer.py  engine.py
src/pgsd/database/: __init__.py  connector.py  factory.py  health.py  manager.py  pool.py  version.py  version_detector.py
src/pgsd/error_handling/: __init__.py  exit_codes.py  retry.py
src/pgsd/exceptions/: __init__.py  base.py  config.py  database.py  processing.py  validation.py
src/pgsd/models/: __init__.py  database.py  schema.py
src/pgsd/reports/: __init__.py  base.py  grouping.py  html.py  markdown.py  templates.py
src/pgsd/schema/: __init__.py  collector.py
src/pgsd/utils/: __init__.py  log_config.py  logger.py  performance.py  security.py
test_reports/: schema_diff_20250716_010839_html.html  schema_diff_20250716_010900_html.html  schema_diff_20250716_011035_html.html  schema_diff_20250716_011035_markdown.md
tests/: __init__.py  conftest.py  test_basic.py  test_cicd_validation.py  test_environment.py  test_main.py
tests/integration/: __init__.py  test_cli_comprehensive.py  test_core_engine_integration.py  test_database_integration.py  test_diff_analyzer_integration.py  test_error_handling_integration.py  test_full_workflow.py  test_main_entry.py
tests/unit/: __init__.py  test___main___new.py  test_main.py  test_main_additional.py  test_main_new.py  test_test_config.py
tests/unit/cli/: test_cli.py  test_commands_simple.py  test_main.py  test_progress_simple.py
tests/unit/config/: test_manager.py  test_parsers_simple.py  test_substitutor_simple.py  test_validator_simple.py
tests/unit/core/: test_analyzer.py  test_analyzer_fixed.py  test_analyzer_simple.py
tests/unit/database/: test_connector_simple.py  test_factory_simple.py  test_pool_simple.py  test_version_detector.py
tests/unit/error_handling/: test_retry_simple.py
tests/unit/exceptions/: __init__.py  test_processing_simple.py  test_validation_simple.py
tests/unit/models/: test_schema.py
tests/unit/reports/: test_markdown.py
tests/unit/schema/: test_collector.py
tests/unit/test_error_handling/: test_retry.py
tests/unit/test_exceptions/: test_base.py  test_database.py
tests/unit/test_utils/: test_log_config.py  test_log_config_impl.py  test_logger.py  test_logger_impl.py  test_performance.py  test_performance_impl.py
tests/unit/utils/: __init__.py  test_log_config_new.py  test_logger_new.py  test_performance_new.py  test_performance_simple.py  test_security.py  test_security_new.py  test_security_simple.py
